--- a/index.html
+++ b/index.html
@@ -1,93 +1,311 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>VS Marketing - Consultoria e Desenvolvimento</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-  <style>
-    * {margin:0; padding:0; box-sizing:border-box; font-family: 'Inter', sans-serif;}
-    body {background:#fff; color:#1e293b; scroll-behavior:smooth;}
-    header {position:fixed; top:0; width:100%; background:#fff; box-shadow:0 2px 10px rgba(0,0,0,0.08); z-index:1000; display:flex; justify-content:space-between; align-items:center; padding:1rem 2rem;}
-    header h1 {color:#0b5fff; font-weight:700;}
-    nav a {margin-left:1.5rem; text-decoration:none; color:#1e293b; font-weight:600; transition:0.3s;}
-    nav a:hover {color:#0b5fff;}
-    section {padding:100px 2rem; min-height:100vh;}
-    .hero {display:flex; flex-direction:column; align-items:center; justify-content:center; text-align:center; animation:fadeIn 1s ease;}
-    .hero h2 {font-size:2.5rem; margin-bottom:1rem; color:#0b5fff;}
-    .hero p {font-size:1.2rem; margin-bottom:2rem; max-width:700px; color:#334155;}
-    .btn {background:#0b5fff; color:#fff; padding:0.75rem 1.5rem; border-radius:8px; text-decoration:none; font-weight:600; transition:0.3s;}
-    .btn:hover {background:#084ed1;}
-    .services {display:grid; grid-template-columns:repeat(auto-fit,minmax(280px,1fr)); gap:2rem; margin-top:2rem;}
-    .card {background:#f8fafc; border-radius:12px; padding:2rem; text-align:center; box-shadow:0 12px 40px rgba(2,6,23,0.08); transition:0.3s;}
-    .card:hover {transform:translateY(-5px);}
-    .card h3 {margin-bottom:1rem; color:#0b5fff;}
-    .contact {background:#0b5fff; color:#fff; text-align:center;}
-    .contact a {color:#fff; text-decoration:none; font-weight:700;}
-    footer {text-align:center; padding:2rem; background:#f1f5f9; color:#64748b;}
-    /* WhatsApp flutuante */
-    .whatsapp {position:fixed; bottom:20px; right:20px; background:#25d366; color:#fff; width:60px; height:60px; border-radius:50%; display:flex; align-items:center; justify-content:center; font-size:2rem; box-shadow:0 4px 15px rgba(0,0,0,0.2); transition:0.3s; z-index:1000;}
-    .whatsapp:hover {transform:scale(1.1);}
-    @keyframes fadeIn {from{opacity:0} to{opacity:1}}
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>VS Marketing — Profissional</title>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+<style>
+:root{
+  --primary:#0b5fff;
+  --secondary:#06b6d4;
+  --dark:#0f1724;
+  --muted:#64748b;
+  --bg:#f8fbff;
+  --card-bg:white;
+  --shadow:rgba(0,0,0,0.1);
+  --shadow-hover:rgba(0,0,0,0.25);
+  --transition:.4s;
+}
+*{box-sizing:border-box;margin:0;padding:0}
+body{font-family:Inter,sans-serif;background:var(--bg);color:var(--dark);scroll-behavior:smooth;}
+a{text-decoration:none;color:inherit;}
+
+/* Header */
+header{
+  position:fixed;top:0;left:0;right:0;height:72px;display:flex;justify-content:space-between;align-items:center;
+  padding:0 40px;background:white;box-shadow:0 2px 12px var(--shadow);z-index:1000;transition:background var(--transition);
+}
+header.scrolled{background:white;}
+.brand{display:flex;align-items:center;gap:12px}
+.logo{width:50px;height:50px;border-radius:8px;background:var(--primary);display:flex;align-items:center;justify-content:center;color:white;font-weight:800;font-size:1.2rem;}
+nav{display:flex;gap:20px;align-items:center;}
+nav a{padding:8px 14px;border-radius:6px;font-weight:600;transition:all var(--transition);}
+nav a:hover{background:rgba(11,95,255,0.1);color:var(--primary);}
+.cta{background:var(--primary);color:white;padding:10px 16px;border-radius:8px;font-weight:700;transition:transform var(--transition);}
+.cta:hover{transform:scale(1.05);}
+
+/* Sections */
+section{padding:120px 20px;min-height:80vh;display:flex;flex-direction:column;justify-content:center;align-items:center;}
+.container{max-width:1200px;margin:0 auto;text-align:center;}
+
+/* Hero */
+#hero{background:white;display:flex;flex-direction:column;justify-content:center;align-items:center;text-align:center;}
+#hero h1{font-size:2.8rem;color:var(--primary);margin-bottom:16px;}
+#hero p{font-size:1.1rem;color:var(--muted);margin-bottom:32px;}
+#hero .cta{padding:14px 24px;font-size:1rem;}
+
+/* Serviços Card */
+.services-grid{display:flex;flex-wrap:wrap;gap:24px;justify-content:center;margin-top:40px;}
+.service{
+  flex:1 1 300px;
+  background:var(--card-bg);
+  border-radius:20px;
+  box-shadow:0 8px 25px var(--shadow);
+  overflow:hidden;
+  transition:transform var(--transition),box-shadow var(--transition),opacity var(--transition);
+  opacity:0;
+  transform: translateY(30px);
+  display:flex;
+  flex-direction:column;
+}
+.service.visible{
+  opacity:1;
+  transform: translateY(0);
+}
+.service img{width:100%;height:180px;object-fit:cover;transition:transform var(--transition);}
+.service:hover{
+  transform: translateY(-10px) scale(1.05);
+  box-shadow:0 20px 50px var(--shadow-hover);
+}
+.service-content{padding:16px;text-align:left;flex:1;display:flex;flex-direction:column;}
+.service h3{margin-bottom:12px;color:var(--primary);}
+.service p{color:var(--muted);font-size:0.95rem;line-height:1.5;margin-bottom:12px;}
+.service a{display:inline-block;padding:8px 14px;background:var(--primary);color:white;border-radius:6px;font-weight:600;transition:transform var(--transition);}
+.service a:hover{transform:scale(1.05);}
+
+/* Crescimento & BI Animada */
+#bi{background:#f8fbff;display:flex;flex-direction:column;align-items:center;justify-content:center;padding:100px 20px;min-height:100vh;}
+#bi h2{margin-bottom:40px;color:var(--primary);font-size:2.8rem;text-align:center;}
+.bi-grid{display:flex;flex-wrap:wrap;gap:24px;justify-content:center;width:100%;max-width:1400px;}
+.bi-card{
+  flex:1 1 300px;background:white;border-radius:20px;box-shadow:0 10px 30px rgba(0,0,0,0.1);
+  padding:32px;text-align:center;transition:transform .4s,opacity .6s;
+  opacity:0; transform:translateY(30px);
+}
+.bi-card h3{color:var(--secondary);margin-bottom:16px;}
+.bi-card .number{font-size:3rem;font-weight:700;color:var(--primary);margin-bottom:16px;}
+.bi-card p, .bi-card small{color:var(--muted);}
+
+/* Rodapé */
+footer{background:#f1f5f9;color:var(--dark);padding:60px 20px;position:relative;}
+footer .contact-map{display:flex;flex-wrap:wrap;gap:20px;justify-content:center;align-items:flex-start;}
+footer .footer-section{flex:1 1 500px;}
+footer iframe{border:0;border-radius:12px;height:400px;width:100%;}
+footer form{display:flex;flex-direction:column;gap:8px;}
+footer input, footer textarea{padding:10px;border-radius:6px;border:1px solid #ccc;background:white;color:var(--dark);}
+footer button{background:var(--primary);color:white;padding:10px;border-radius:8px;font-weight:600;cursor:pointer;transition:transform var(--transition);}
+footer button:hover{transform:scale(1.05);}
+.footer-socials{position:absolute;bottom:15px;left:50%;transform:translateX(-50%);display:flex;gap:20px;}
+.footer-socials a{text-decoration:none;font-size:1.6rem;transition:transform .3s;}
+.footer-socials a:hover{transform:scale(1.3);}
+
+/* WhatsApp lateral */
+.whatsapp-lateral{position:fixed;right:0;top:50%;transform:translateY(-50%);background:#25d366;color:white;width:50px;height:50px;border-radius:50% 0 0 50%;display:flex;align-items:center;justify-content:center;font-size:24px;box-shadow:0 0 20px rgba(0,0,0,0.2);z-index:2000;transition:transform var(--transition);}
+.whatsapp-lateral:hover{transform:translateY(-50%) scale(1.1);}
+</style>
 </head>
 <body>
 
 <header>
-  <h1>VS Marketing</h1>
-  <nav>
-    <a href="#services">Serviços</a>
-    <a href="#about">Sobre</a>
-    <a href="#contact">Contato</a>
-  </nav>
+<div class="brand">
+  <div class="logo">VS</div>
+  <div>
+    <div style="font-weight:800">VS Marketing</div>
+    <div style="font-size:12px;color:var(--muted)">Consultoria & Desenvolvimento</div>
+  </div>
+</div>
+<nav>
+  <a href="#services">Serviços</a>
+  <a href="#bi">Performance</a>
+  <a href="#contato">Contato</a>
+  <a class="cta" href="https://wa.me/5531992929447" target="_blank">WhatsApp</a>
+</nav>
 </header>
 
-<section class="hero" id="home">
-  <h2>Consultoria e Desenvolvimento Profissional</h2>
-  <p>Oferecemos soluções completas em .NET, Java, Node, PHP, Python, React, Vue, Angular. Projetos personalizados, sites institucionais e divulgação estratégica nas redes sociais.</p>
-  <a class="btn" href="#contact">Entre em contato</a>
+<!-- Hero -->
+<section class="container" id="hero">
+<h1>Transforme sua Empresa com Soluções Digitais Profissionais</h1>
+<p>Desenvolvimento, consultoria e marketing para empresas que buscam resultados reais.</p>
+<a class="cta" href="https://wa.me/5531992929447" target="_blank">Comece Agora</a>
 </section>
 
-<section id="services">
-  <h2 style="text-align:center; margin-bottom:2rem; color:#0b5fff;">Nossos Serviços</h2>
-  <div class="services">
-    <div class="card">
-      <h3>Desenvolvimento Web</h3>
-      <p>Sites institucionais, lojas online e aplicativos web com tecnologias modernas como React, Angular e Vue.</p>
-    </div>
-    <div class="card">
-      <h3>Consultoria e Treinamento</h3>
-      <p>Treinamento de equipes e consultoria em projetos personalizados, migrações e melhorias de performance.</p>
-    </div>
-    <div class="card">
-      <h3>Integração e Automação</h3>
-      <p>Integração de sistemas, automação de processos, WhatsApp Business API e campanhas estratégicas de marketing.</p>
-    </div>
-    <div class="card">
-      <h3>Projetos Personalizados</h3>
-      <p>Desenvolvemos soluções únicas de acordo com sua necessidade, do planejamento à execução completa.</p>
-    </div>
-  </div>
+<!-- Serviços -->
+<section class="container" id="services">
+<h2>Serviços</h2>
+<div class="services-grid">
+
+<div class="service">
+<img src="https://source.unsplash.com/300x180/?website,design" alt="Sites">
+<div class="service-content">
+<h3>Sites Institucionais & Personalizados</h3>
+<p>Criação de sites modernos, responsivos e totalmente adaptados às necessidades da sua empresa.</p>
+<a href="#">Saiba Mais</a>
+</div>
+</div>
+
+<div class="service">
+<img src="https://source.unsplash.com/300x180/?code,programming" alt="Consultoria">
+<div class="service-content">
+<h3>Consultoria em Linguagens</h3>
+<p>.NET, Java, Python, PHP, React, Node, Angular e Vue.</p>
+<a href="#">Saiba Mais</a>
+</div>
+</div>
+
+<div class="service">
+<img src="https://source.unsplash.com/300x180/?migration,technology" alt="Migração">
+<div class="service-content">
+<h3>Migração de Sistemas Legados</h3>
+<p>Modernizamos sistemas antigos mantendo dados e processos intactos, garantindo transição segura.</p>
+<a href="#">Saiba Mais</a>
+</div>
+</div>
+
+<div class="service">
+<img src="https://source.unsplash.com/300x180/?frontend,interface" alt="Front-End">
+<div class="service-content">
+<h3>Modernização Front-End</h3>
+<p>Reestruturação de interfaces para proporcionar navegação intuitiva e design moderno.</p>
+<a href="#">Saiba Mais</a>
+</div>
+</div>
+
+<div class="service">
+<img src="https://source.unsplash.com/300x180/?marketing,digital" alt="Marketing">
+<div class="service-content">
+<h3>Marketing Digital</h3>
+<p>Planejamento e execução de campanhas digitais estratégicas para aumentar presença e engajamento.</p>
+<a href="#">Saiba Mais</a>
+</div>
+</div>
+
+<div class="service">
+<img src="https://source.unsplash.com/300x180/?security,dataprotection" alt="Segurança">
+<div class="service-content">
+<h3>Proteção de Dados</h3>
+<p>Implementação de políticas e ferramentas de segurança, garantindo proteção digital.</p>
+<a href="#">Saiba Mais</a>
+</div>
+</div>
+
+</div>
 </section>
 
-<section id="about">
-  <h2 style="text-align:center; margin-bottom:2rem; color:#0b5fff;">Sobre Nós</h2>
-  <p style="max-width:700px; margin:0 auto; text-align:center; line-height:1.6;">
-    A VS Marketing oferece consultoria tecnológica de ponta para empresas que desejam crescer com soluções digitais modernas. Atuamos em todos os níveis: desde a concepção do projeto até treinamento de equipes e integração com redes sociais.
-  </p>
+<!-- Crescimento & Performance BI Animada -->
+<section id="bi">
+<div class="bi-grid">
+
+<!-- Clientes -->
+<div class="bi-card">
+<h3>Clientes</h3>
+<div class="number" data-target="3000">0</div>
+<div style="height:180px;display:flex;align-items:flex-end;justify-content:space-between;gap:6px;">
+  <div style="width:18%;background:#0b5fff;height:40%;border-radius:8px;transition:height 1s;"></div>
+  <div style="width:18%;background:#0b5fff;height:70%;border-radius:8px;transition:height 1s;"></div>
+  <div style="width:18%;background:#0b5fff;height:90%;border-radius:8px;transition:height 1s;"></div>
+  <div style="width:18%;background:#0b5fff;height:100%;border-radius:8px;transition:height 1s;"></div>
+  <div style="width:18%;background:#0b5fff;height:100%;border-radius:8px;transition:height 1s;"></div>
+</div>
+<small>2019 → 2023</small>
+</div>
+
+<!-- Projetos -->
+<div class="bi-card">
+<h3>Projetos</h3>
+<div class="number" data-target="1000">0</div>
+<p>Entregues: <span class="delivered" data-target="800">0</span></p>
+<p>Em Andamento: <span class="inprogress" data-target="200">0</span></p>
+</div>
+
+<!-- Satisfação -->
+<div class="bi-card">
+<h3>Satisfação</h3>
+<div class="number" data-target="98">0%</div>
+<div>
+<i class="fas fa-star" style="color:#FFD700;margin:0 2px;"></i>
+<i class="fas fa-star" style="color:#FFD700;margin:0 2px;"></i>
+<i class="fas fa-star" style="color:#FFD700;margin:0 2px;"></i>
+<i class="fas fa-star" style="color:#FFD700;margin:0 2px;"></i>
+<i class="fas fa-star-half-alt" style="color:#FFD700;margin:0 2px;"></i>
+</div>
+</div>
+
+</div>
 </section>
 
-<section id="contact" class="contact">
-  <h2>Entre em Contato</h2>
-  <p>WhatsApp: <a href="https://wa.me/5531992929447" target="_blank">+55 31 99292-9447</a></p>
-  <p>Email: <a href="mailto:contato@vsmarketing.com.br">contato@vsmarketing.com.br</a></p>
-</section>
+<!-- Contato / Rodapé -->
+<footer id="contato">
+<div class="contact-map">
+<div class="footer-section">
+<h3>Contato</h3>
+<form>
+<input type="text" placeholder="Nome" required>
+<input type="email" placeholder="Email" required>
+<textarea placeholder="Mensagem" rows="6" required></textarea>
+<button type="submit">Enviar</button>
+</form>
+</div>
 
-<footer>
-  &copy; 2025 VS Marketing. Todos os direitos reservados.
+<div class="footer-section">
+<h3>Mapa</h3>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18..." allowfullscreen="" loading="lazy"></iframe>
+</div>
+</div>
+
+<div class="footer-socials">
+<a href="#" style="color:#3b5998;"><i class="fab fa-facebook"></i></a>
+<a href="#" style="color:#E1306C;"><i class="fab fa-instagram"></i></a>
+<a href="#" style="color:#0A66C2;"><i class="fab fa-linkedin"></i></a>
+<a href="#" style="color:#1DA1F2;"><i class="fab fa-twitter"></i></a>
+</div>
 </footer>
 
-<a href="https://wa.me/5531992929447" target="_blank" class="whatsapp">📲</a>
+<a href="https://wa.me/5531992929447" target="_blank" class="whatsapp-lateral"><i class="fab fa-whatsapp"></i></a>
+
+<script>
+window.addEventListener('scroll',()=>{document.querySelector('header').classList.toggle('scrolled',window.scrollY>50)});
+
+// Fade-in cards serviços
+const cards = document.querySelectorAll('.service');
+const observer = new IntersectionObserver(entries=>{
+  entries.forEach(entry=>{
+    if(entry.isIntersecting){entry.target.classList.add('visible');}
+  });
+},{threshold:0.2});
+cards.forEach(card=>observer.observe(card));
+
+// Animação números BI
+function animateValue(el, start, end, duration){
+  let startTime = null;
+  function step(timestamp){
+    if(!startTime) startTime=timestamp;
+    const progress = Math.min((timestamp - startTime)/duration,1);
+    el.innerText = Math.floor(progress*(end-start)+start);
+    if(progress<1) window.requestAnimationFrame(step);
+  }
+  window.requestAnimationFrame(step);
+}
+const biCards = document.querySelectorAll('#bi .bi-card');
+const biObserver = new IntersectionObserver(entries=>{
+  entries.forEach(entry=>{
+    if(entry.isIntersecting){
+      entry.target.style.opacity = "1";
+      entry.target.style.transform = "translateY(0) scale(1.05)";
+
+      // Animar números
+      const num = entry.target.querySelectorAll('.number');
+      num.forEach(n=>animateValue(n,0,parseInt(n.getAttribute('data-target')),2000));
+      const delivered = entry.target.querySelector('.delivered');
+      if(delivered) animateValue(delivered,0,parseInt(delivered.getAttribute('data-target')),2000);
+      const inprogress = entry.target.querySelector('.inprogress');
+      if(inprogress) animateValue(inprogress,0,parseInt(inprogress.getAttribute('data-target')),2000);
+    }
+  });
+},{threshold:0.3});
+biCards.forEach(card=>biObserver.observe(card));
+</script>
 
 </body>
 </html>
