Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ footer button:hover{transform:scale(1.05);}
 <div class="services-grid">
 
 <div class="service">
-<img src="https://source.unsplash.com/300x180/?website,design" alt="Sites">
+<img src="images\site.jpg" alt="Sites">
 <div class="service-content">
 <h3>Sites Institucionais & Personalizados</h3>
 <p>Criação de sites modernos, responsivos e totalmente adaptados às necessidades da sua empresa.</p>
@@ -146,7 +146,7 @@ footer button:hover{transform:scale(1.05);}
 </div>
 
 <div class="service">
-<img src="https://source.unsplash.com/300x180/?code,programming" alt="Consultoria">
+<img src="images\consultoria.jpg" alt="Consultoria">
 <div class="service-content">
 <h3>Consultoria em Linguagens</h3>
 <p>.NET, Java, Python, PHP, React, Node, Angular e Vue.</p>
@@ -155,7 +155,7 @@ footer button:hover{transform:scale(1.05);}
 </div>
 
 <div class="service">
-<img src="https://source.unsplash.com/300x180/?migration,technology" alt="Migração">
+<img src="images\migração.jpg" alt="Migração">
 <div class="service-content">
 <h3>Migração de Sistemas Legados</h3>
 <p>Modernizamos sistemas antigos mantendo dados e processos intactos, garantindo transição segura.</p>
@@ -164,7 +164,7 @@ footer button:hover{transform:scale(1.05);}
 </div>
 
 <div class="service">
-<img src="https://source.unsplash.com/300x180/?frontend,interface" alt="Front-End">
+<img src="images\front.jpg" alt="Front-End">
 <div class="service-content">
 <h3>Modernização Front-End</h3>
 <p>Reestruturação de interfaces para proporcionar navegação intuitiva e design moderno.</p>
@@ -173,7 +173,7 @@ footer button:hover{transform:scale(1.05);}
 </div>
 
 <div class="service">
-<img src="https://source.unsplash.com/300x180/?marketing,digital" alt="Marketing">
+<img src="images\marketing.jpg" alt="Marketing">
 <div class="service-content">
 <h3>Marketing Digital</h3>
 <p>Planejamento e execução de campanhas digitais estratégicas para aumentar presença e engajamento.</p>
@@ -182,7 +182,7 @@ footer button:hover{transform:scale(1.05);}
 </div>
 
 <div class="service">
-<img src="https://source.unsplash.com/300x180/?security,dataprotection" alt="Segurança">
+<img src="images\segurança.jpg" alt="Segurança">
 <div class="service-content">
 <h3>Proteção de Dados</h3>
 <p>Implementação de políticas e ferramentas de segurança, garantindo proteção digital.</p>
